--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,7 @@ include(cmake/config.cmake)
 set(SHAPE_DETECTOR_APP shape_detector)
 set(RUN_SHAPE_DETECTOR_APP run_${SHAPE_DETECTOR_APP})
 
-set(SHAPE_DETECTOR_SRC shape_detector.cc utils.cc shape_detector.hpp)
+set(SHAPE_DETECTOR_SRC shape_detector.cc utils.cc)
 
 add_executable(${SHAPE_DETECTOR_APP} ${SHAPE_DETECTOR_SRC})
 
