--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,10 @@ set_target_properties(${SHAPE_DETECTOR_APP} PROPERTIES RUNTIME_OUTPUT_DIRECTORY
 
 target_compile_options(${SHAPE_DETECTOR_APP} PRIVATE -Wall -Werror -Wextra)
 
+# target_compile_definitions(${SHAPE_DETECTOR_APP} PRIVATE EDGES)
+target_compile_definitions(${SHAPE_DETECTOR_APP} PRIVATE HSV)
+# target_compile_definitions(${SHAPE_DETECTOR_APP} PRIVATE EDGES)
+
 target_link_libraries(${SHAPE_DETECTOR_APP} ${OpenCV_LIBS})
 
 add_custom_target(
